--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   background-color: #1e1f29;
   color: white;
   height: 100vh;
-  background-image: url(/images/pattern-hills.svg), url(/images/bg-stars.svg);
+  background-image: url(./images/pattern-hills.svg), url(./images/bg-stars.svg);
   background-repeat: no-repeat;
   background-position: bottom,top;
   font-size: clamp(8px, 1vw, 20px);
