--- a/styles.scss
+++ b/styles.scss
@@ -18,7 +18,7 @@ body{
     color: $White;
     height: 100vh;
   
-    background-image: url(/images/pattern-hills.svg),url(/images/bg-stars.svg);
+    background-image: url(./images/pattern-hills.svg),url(./images/bg-stars.svg);
     background-repeat: no-repeat;
     background-position: bottom,top;
     font-size: clamp(8px,1vw ,20px);    
